<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:id="@+id/id_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="2"
        android:padding="5dp">

        <TextView
            android:text="@string/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/id_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_id"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_linearlayout"
        android:weightSum="2"
        android:padding="5dp">

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_name"
            android:inputType="text"/>
    </LinearLayout>





    <LinearLayout
        android:id="@+id/email_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_linearlayout"
        android:weightSum="2"
        android:padding="5dp">

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/phone_number_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_linearlayout"
        android:weightSum="2"
        android:padding="5dp">

        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/phone_number_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="(555) 218-5170"
            android:inputType="phone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_linearlayout"
        android:weightSum="2"
        android:padding="5dp">

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/status_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_weight="1"/>

<!--        <EditText-->
<!--            android:id="@+id/status_editText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"/>-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>