<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/opportunities_title_textview"
        android:text="@string/opportunities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"

        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/opportunity_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/opportunity_id_linearlayout"/>

    <Button
        android:id="@+id/opportunity_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/opportunities_title_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/opportunity_id_linearlayout"
        android:layout_marginRight="15dp"/>


    <LinearLayout
        android:id="@+id/opportunity_id_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opportunities_title_textview"
        app:layout_constraintBottom_toTopOf="@id/opportunities_recycler"
        android:weightSum="3"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">

        <TextView
            android:text="@string/opportunity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <include
        android:id="@+id/opportunities_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/content_opportunities_list_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opportunity_id_linearlayout" />


</androidx.constraintlayout.widget.ConstraintLayout>