<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogfragments.AddNewCustomerDialogFragment">

    <TextView
        android:id="@+id/customer_detail_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_customer_details"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <include layout="@layout/customer_details_layout"
        android:id="@+id/layout_customer_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_detail_textview"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_customer_detail"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/layout_customer_detail"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        />

</androidx.constraintlayout.widget.ConstraintLayout>