<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/customer_information_cardview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outline_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/gray">

        <TextView
            android:id="@+id/textview_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/textview_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintDimensionRatio="1:1"
            />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/textview_status"
            app:layout_constraintStart_toEndOf="@id/textview_id"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/textview_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/textview_created_date"
            app:layout_constraintStart_toEndOf="@id/textview_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="30dp"
            />



        <TextView
            android:id="@+id/textview_created_date"
            android:text="@string/created_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textview_status"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"

            />

        <View
            android:id="@+id/view_line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:paddingTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/outline_constraintlayout"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>