<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogfragments.AddNewOpportunityDialogFragment"
    android:padding="15dp">


    <TextView
        android:id="@+id/add_opportunities_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_opportunities"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_opportunities_layout"
        />

    <include layout="@layout/add_new_opportunities_layout"
        android:id="@+id/add_opportunities_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_opportunities_title_textview"
        app:layout_constraintBottom_toTopOf="@id/save_opportunities_button"/>

    <Button
        android:id="@+id/save_opportunities_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/close_opportunities_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_opportunities_layout"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/close_opportunities_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_opportunities_button"
        app:layout_constraintTop_toBottomOf="@id/add_opportunities_layout"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

